<resources>
    <string name="app_name">APTapp</string>

    <string-array name="departaments">
        <item>Строительное отделение</item>
        <item>Нефтяное отделение</item>
    </string-array>

    <string name="first_course">Первый курс</string>
    <string name="second_course">Второй курс</string>
    <string name="third_course">Третий курс</string>
    <string name="fourth_course">Четвертый курс</string>

    <string name="connection_error">Ошибка при получении данных</string>

    <string name="schedule_for">Расписание для</string>
    <string name="name">Название</string>
    <string name="teacher">Преподаватель</string>
    <string name="time_start">08:00</string>
    <string name="auditorium_example">ауд. 227</string>
    <string name="select_date">Выбор даты</string>
    <string name="auditorium">ауд.</string>

    <string name="widget_name">Расписание</string>

    <string name="construction_department">Строительное отделение</string>
    <string name="oil_department">Нефтяное отделение</string>
    <string name="choose_group">Выберите группу</string>
    <string name="time_end">09:25</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="students">Студенты</string>
    <string name="teachers">Преподаватели</string>
    <string name="choose_course_number">Выберите номер курса</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_teacher">Выберите преподавателя</string>
    <string name="enter_name">Введите имя...</string>
    <string name="teacher_name_example">Иванов Иван Иванович</string>
    <string name="loading">Загрузка...</string>

</resources>