<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    tools:context=".SelectCourseFragment">
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.4"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:gravity="center"
            android:text="@string/choose_group"
            android:textColor="?attr/apt_text_color"
            android:textSize="20sp" />
        <include
            android:id="@+id/menuButton"
            layout="@layout/menu_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true" />
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"/>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.6"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/firstCourseButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/rouned_button"
                android:backgroundTint="?attr/apt_all_subgroups_color"
                android:textColor="?attr/apt_text_color"
                android:text="@string/first_course" />
            <Button
                android:id="@+id/secondCourseButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/rouned_button"
                android:backgroundTint="?attr/apt_all_subgroups_color"
                android:textColor="?attr/apt_text_color"
                android:text="@string/second_course" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/thirdCourseButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/rouned_button"
                android:backgroundTint="?attr/apt_all_subgroups_color"
                android:textColor="?attr/apt_text_color"
                android:text="@string/third_course" />
            <Button
                android:id="@+id/fourthCourseButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/rouned_button"
                android:backgroundTint="?attr/apt_all_subgroups_color"
                android:textColor="?attr/apt_text_color"
                android:text="@string/fourth_course" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>