<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".ScheduleActivity">

    <TextView
        android:id="@+id/scheduleForText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0.8"
        android:gravity="center"
        android:text="@string/schedule_for"
        android:textColor="@color/apt_text"
        android:textSize="20sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        app:cardCornerRadius="22dp"
        android:backgroundTint="@color/colorPrimary"
        app:cardElevation="0dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="12">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/scheduleRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/dateSelectMenu"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@drawable/rounded_date_menu"
        android:backgroundTint="@color/colorAccent"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/loading"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonSelectDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:background="@drawable/rouned_button"
            android:backgroundTint="@color/colorPrimary"
            android:gravity="center"
            android:onClick="selectDate"
            android:text="@string/select_date"
            android:textColor="@color/colorAccent" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2" />
    </LinearLayout>

</LinearLayout>