<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/subjectLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_marginBottom="10dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="@drawable/first_subgroup_from_two_rounded"
        android:backgroundTint="#C0FAD0">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:layout_marginStart="10dp">
            <TextView
                android:id="@+id/subjectTimeStart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/time_start"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/subjectDash"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="-5dp"
                android:layout_weight="1"
                android:text="-"
                android:textSize="16sp" />
        </LinearLayout>



        <LinearLayout
            android:id="@+id/firstSubgroupSubjectInfo"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/firstSubgroupSubjectNameView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/name"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/firstSubgroupSubjectAuditoriumView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center|start"
                    android:text="@string/auditorium_example"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/firstSubgroupTeacherNameView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="16sp"
                    android:maxLines="1"
                    android:text="@string/teacher_name_example"
                    android:gravity="center|end"
                    android:layout_marginRight="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="1" />
            </LinearLayout>
            <androidx.legacy.widget.Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"/>
        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="@drawable/second_subgroup_from_two_rounded"
        android:backgroundTint="#C0CAFA">

        <TextView
            android:id="@+id/subjectTimeEnd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="5"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/time_end"
            android:textSize="16sp" />


        <LinearLayout
            android:id="@+id/secondSubgroupSubjectInfo"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="4dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/secondSubgroupSubjectNameView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:layout_marginTop="8dp"
                android:text="@string/name"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/secondSubgroupSubjectAuditoriumView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center|start"
                    android:text="@string/auditorium_example"
                    android:textSize="16sp"/>
                <TextView
                    android:id="@+id/secondSubgroupTeacherNameView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="16sp"
                    android:maxLines="1"
                    android:text="@string/teacher_name_example"
                    android:gravity="center|end"
                    android:layout_marginRight="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>